
purple (07/04/05)
--------------------
+ Updated version to 5.0.0.24pre
+ Fixed light member of spawnStruct (thanks BlueAdept)
+ Updated qt required version to 3.2 because I used QString.replace that
	was added there
+ Rewrote the # stripping stuff from filters so you can still search on #
+ Filled in auto consents into charProfileStruct
+ Filled in a little more of spawnStruct


purple (07/02/05)
---------------------
+ Updated version to 5.0.0.23
+ Strip the # off names before matching to filters to aid in filter writing
+ Strip the # off the strong of filters as well just to make the # irrevelant
	to filters (thanks BlueAdept for both these)
+ Cleaned up the help spew for --help. There were some bogus things in there.
+ Cleaned up the status bar exp/aa exp display
+ Added struct for OP_Illusion and a spawnshell handler so that illusions
	are propagated to the spawn list and the map
+ Filled in some missing races with artificial names not taken from the
	.exe (thanks uRit1u2CBBA=)
+ Added two known bugs to BUGS with descriptions and workarounds
+ Fixed some long zone names in zones.h and added new zones from .exe
+ Updated all opcodes for 6/29 patch (thanks Doodman, ieatacid)
+ Updated structs for 6/29 patch (spawnStruct, positioning structs mostly)

purple (05/18/05)
---------------------
+ Updated version to 5.0.0.22
+ Found OP_SpawnRename again. It's used to rename the Bristlebane jesters
+ Fixed problem in net layer where opcodes were showing up as 0000. Treat 0000
	as a special case where the app opcode is 00 + next byte on the wire
+ Fixed to work with patch on 05/18/2005 by bumping MAX_AA to 240

purple (05/11/05)
----------------------
+ Updated version to 5.0.0.21
+ Added some session-related opcodes to worldopcodes.xml
+ Fixed opcodes for alt exp and hooked altExpUpdateStruct so alt exp updating
	maps properly
+ Made it so OP_ManaChange can be 0 size. Bards have this a lot.
+ Fix problems with guilds numbered higher than 512