@@ -9,6 +9,7 @@ purple (07/04/05)
 + Rewrote the # stripping stuff from filters so you can still search on #
 + Filled in auto consents into charProfileStruct
 + Filled in a little more of spawnStruct
++ Added a couple new weapons that show when worn (from uRit1u2CBBA=)
 
 
 purple (07/02/05)
